--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <html>
 
 <head>
-    <title>Riaan Theron Online</title>
+    <title>Riaan Theron Online Portfolio</title>
     <meta charset="utf-8" />
     <link href = "index_style.css" rel = "stylesheet" type = "text/css">
 </head>
@@ -15,14 +15,14 @@
     <div class="introText">
       <h1>WELCOME TO MY <span id = orangeText>ONLINE</span> PROFILE!</h1>
       <p>
-      <b>a Short intro about myself - </b>Hi! Thanks for visiting my page! smileyface
+      <b>a Short intro about myself - </b>Hi! Thanks for visiting my page!
       My name is Riaan, and I grew up in the small town south of South Africa, called Hermanus.
-      After Highschool I completed my Diploma in Civil Engineering, with a post grad degree in Construction Management.
-      I then worked for a construction company all over South Africa for a couple of years. 
+      After Highschool I completed my Diploma in Civil Engineering, with a post graduate degree in Construction Management.
+      After that, I spent a few years working for a construction company throughout South Africa. 
       </p>
     </div>
     <div class="profilePhoto">
-      <img src = "Profile Image.jpeg" alt="photo not in file" height="200" width="auto">
+      <img src = "Riaan Prof Pic_02.jpg" alt="photo not in file" height="250" width="auto">
     </div>
   </div>
     
@@ -31,7 +31,7 @@
         <h2>My education</h2>
         <ul>
           <li class="listfont" >Software Engineering Bootcamp</li>
-          Year obtained - in progress
+          Year obtained - 2023
           <li class="listfont">Bachelor of Technology Construction Management</li>
           Year obtained - 2015
           <li class="listfont">National Diploma in Civil Engineering</li>
@@ -58,15 +58,18 @@
         <h2>a New Era!</h2>
         <p class="moreButton">"The Only Constant in Life is Change".</p>
         <p>
-        Moving with the Times. I have since ended my journey in the construction industry
-        <br>as I decided to test my abilities and explore what I feel is one of the most intimidating and  
-        <br>talked about industries currently, the tech industry.
+          While I have a background in the construction industry, I am passionate 
+          about leveraging programming to develop innovative solutions that streamline 
+          and automate complex human problems. Therefore, I decided to explore this 
+          industry and expand my skill set by taking a new direction towards technology. 
+          I am excited to learn new things and bridge the gap between my past experiences 
+          and my future goals.
         <br>
         <br> 
         </p>
 
         <p>
-          <b>Thats all for now, thank you and goodbye!</b> 
+          <b>I would love to connect so please feel free to visit my links below!</b> 
         </p>
       </section>
     </div>
@@ -78,10 +81,10 @@
         <p><a target = "_blank" href="mailto:kawasakiriaan@gmail.com">kawasakiriaan@gmail.com</a></p> </div>
       <div class="footer-grid-block">
         <h3 class="footer-heading">Phone </h3> 
-        <p>+27 073 396 5115</p> </div>
+        <p>hidden online</p> </div>
       <div class="footer-grid-block">
         <h3 class="footer-heading">Linkedin</h3> 
-        <p><a target = "_blank" href = "https://www.linkedin.com/in/riaan-theron-a14262101/" >Open my Linkedin Profile</a></p> </div>
+        <p><a target = "_blank" href = "https://www.linkedin.com/in/theronriaan/" >Open my Linkedin Profile</a></p> </div>
       <div class="footer-grid-block">
         <h3 class="footer-heading">GitHub Profile</h3> 
         <p><a target = "_blank" href = "https://github.com/riaanwastaken" >Open my GitHub Profile</a></p> </div>
